initial commit rsp v2 (changing the img name)

--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
 
         <div class="rcp">
             <p class="p1">Player 1</p>
-            <img class="img1" src="images/rcp1.jpg">
+            <img class="img1" src="images/rsp1.jpg">
         </div>
 
         <div class="rcp">
             <p class="p2">Player 2</p>
-            <img class="img2" src="images/rcp1.jpg">
+            <img class="img2" src="images/rsp1.jpg">
         </div>
 
         <div class="click-me col-md-12">
